<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="detailViewModel"
        type="com.example.loginui.viewmodel.DetailViewModel" />
</data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".DetailsActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_topics"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.88"
                    android:background="@drawable/searchview_background"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@+id/searchView"
                        android:background="@android:color/transparent"
                        android:hint="Search Items"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="6dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/searchView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="6dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/my_button_bg"
                        android:padding="8dp"
                        android:src="@drawable/ic_baseline_search_24" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtFilter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.12"
                    android:text="@string/filter"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/diagnostics"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSeeAllDiagnostics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:text="@string/see_all"
                    android:onClick="onClick"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDiagnostics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/mental_health"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSeeAllMentalHealth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:text="@string/see_all"
                    android:onClick="onClickMentalHeath"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMentalHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/yoga_meditation"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSeeAllYogaMeditation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:text="@string/see_all"
                    android:onClick="onClickYoga"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewYogaMeditation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/sports_medicine"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSeeAllSportsMedicine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:text="@string/see_all"
                    android:onClick="onClickSportsMeditation"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSportsMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/podcasts_health_vlogs"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPodcasts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/outdoor_health_tips"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSeeAllLOutDoorHealth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
                    android:text="@string/see_all"
                    android:onClick="onClickOutdoorHealth"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDoorHealth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </ScrollView>
</layout>
