<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.loginui.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg_grey">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="#0A000000"
            android:layout_alignParentBottom="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/indicator"
                    />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/txtLogin"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="12dp"
                    android:clipToPadding="false"
                    app:tabBackground="@drawable/indicator_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMinWidth="10dp"
                    app:tabPaddingEnd="10dp"
                    app:tabPaddingStart="10dp" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/layoutLogin"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/login_signup"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutLogin"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_above="@id/layoutOR"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.8"
                        android:background="@drawable/edit_text_border">

                        <EditText
                            android:id="@+id/edtMobileNo"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="6dp"
                            android:layout_toEndOf="@id/view"
                            android:background="@null"
                            android:ems="10"
                            android:text="@={viewModel.email}"
                            android:textColorHint="@color/white"
                            android:hint="@string/enter_your_mobile_number"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="1dp"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/spinner"
                            android:background="@color/white" />

                        <RelativeLayout
                            android:id="@+id/spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:paddingStart="8dp"
                            android:text="+91"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold">

                            <ImageView
                                android:id="@+id/ivFlag"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_centerVertical="true"
                                android:padding="5dp"
                                app:srcCompat="@drawable/flag" />

                            <ImageView
                                android:id="@+id/tvPopulation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toEndOf="@+id/ivFlag"
                                android:layout_toRightOf="@+id/ivFlag"
                                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                                android:text="TextView"
                                android:textStyle="bold" />
                        </RelativeLayout>
                    </RelativeLayout>

                    <ImageButton
                        android:id="@+id/btnSignIn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="4dp"
                        android:layout_weight="0.2"
                        android:background="@drawable/my_button_bg"
                        android:src="@drawable/fast_forward"
                        app:tint="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutOR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/btnContinueEmail"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:background="@color/white" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:gravity="center"
                        android:text="OR"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.9"
                        android:background="@color/white" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnContinueEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="36dp"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:text="@string/continue_google" />
            </RelativeLayout>
        </FrameLayout>


    </RelativeLayout>
</layout>

